fixed font problem on IE 6, IE 5.5 might have now font problems but I can't test and it is sort of old anyway
git-svn-id: http://svn.aei.mpg.de/eScience/GridSphere/trunk@5003 9c99c85f-4d0c-0410-8460-a9a1c48a3a7f

--- a/webapps/gridsphere/themes/brush/default/css/general.css
+++ b/webapps/gridsphere/themes/brush/default/css/general.css
@@ -12,8 +12,7 @@ body {
 }
 
 * html body {
-    font-size: x-small; /* for IE5/Win */
-    f\ont-size: x-small; /* for other IE Versions */
+    font-size: small; /* for IE5/Win */
 }
 
 html {
